--- a/public/css/body_farmacia.css
+++ b/public/css/body_farmacia.css
@@ -25,7 +25,8 @@
   transition: background-color 1000ms;
   transition-delay:all 100000s;
   width:30%;
- 
+  padding-bottom: 2%;
+  text-align: center; 
 }
 
 .elementoUm_article_div:hover{
@@ -41,25 +42,20 @@
 }
 
 .elementoUm_article_div  button{
-  padding-right:5%;
-  padding-left: 5%;
-  padding-bottom: 2%;
-  padding-top: 2%;
-  margin-top: 5%;
-  margin-left: 1%;
-  margin-right: 1%;
-  margin-bottom: 5%;
-  background-color: #ef8d8d;
-  border-radius: 10px;
+  padding: 2%;
+  background-color: rgb(59, 92, 79);
   border: none;
-  text-align: center;
-  font-weight: 800;
-  color:white;
-  cursor: pointer;
+  border-radius: 5px;
+  cursor: grabbing;
+  color: white;
+  border: 0.7px solid white;
+  font-weight: bold;
 }
 
 .elementoUm_article_div  button:hover{
-  background-color: rgb(213, 33, 33);
+  background-color: white;
+  color: rgb(59, 92, 79);
+  border: 0.7px solid rgb(59, 92, 79);
 
 }
 
@@ -95,12 +91,14 @@
   border-radius: 10px;
   transition: background-color 1000ms;
   width:30%;
+  text-align: center;
+  padding-bottom: 2%;
 }
 
 .elementoDois_article_div:hover{
   background-color: rgb(247, 180, 185);
   border:solid 2px rgb(238, 9, 9);
-
+  box-shadow: 0px 1px 20px #a81e1e ;
 }
 
 .elementoDois_article_div  p {
@@ -110,24 +108,20 @@
 }
 
 .elementoDois_article_div  button{
-  padding-right:5%;
-  padding-left: 5%;
-  padding-bottom: 2%;
-  padding-top: 2%;
-  margin-top: 5%;
-  margin-left: 1%;
-  margin-right: 1%;
-  margin-bottom: 5%;
-  background-color: #ef8d8d;
-  border-radius: 10px;
+  padding: 2%;
+  background-color: rgb(86, 92, 94);
   border: none;
-  font-weight: 800;
-  color:white;
-  cursor: pointer;
+  border-radius: 5px;
+  cursor: grabbing;
+  color: white;
+  border: 0.7px solid white;
+  font-weight: bold;
 }
 
 .elementoDois_article_div  button:hover{
-  background-color: rgb(213, 33, 33);
+  background-color: white;
+  color: rgb(59, 92, 79);
+  border: 0.7px solid rgb(59, 92, 79);
 
 }
 
