--- a/src/views/body/farmacia.ejs
+++ b/src/views/body/farmacia.ejs
@@ -192,7 +192,7 @@
               <p><%= element1.description %> </p>
               <P> R$ <%= toThousand(element1.price) %> </P>
               <a target="_blank" href="/area_compras_farmacia/<%= element1.item %> ">
-                <button type="submit">Comprar</button></a>
+                <button id="button_comprar" type="submit">Comprar</button></a>
               <button type="submit">Carrinho</button>
           </div>
 
@@ -214,7 +214,7 @@
             <p><%= element2.description %></p>
             <P>R$ <%= toThousand(element2.price) %></P>
             <a  target="_blank" href="/area_compras_farmacia/<%= element2.item %>">
-              <button type="submit">Comprar</button></a>
+              <button id="button_comprar" type="submit">Comprar</button></a>
             <button type="submit">Carrinho</button>
         </div>
 
