--- a/src/views/body/area_compras_farmacia.ejs
+++ b/src/views/body/area_compras_farmacia.ejs
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/menu_hamburguer.css">
   <link rel="stylesheet" href="/css/area_compras_header.css">
   <link rel="stylesheet" href="/css/area_compras.css">
+  <link rel="stylesheet" href="/css/menu_hamburguer.css">
 
 </head>
 
@@ -183,14 +184,7 @@
 </section>
 
 
-
-   
-
- 
-
-
-  
-
+<script src="/js/menu_hamburguer.js"></script>
 
 </body>
 
