--- a/src/views/body/area_compras2.ejs
+++ b/src/views/body/area_compras2.ejs
@@ -148,10 +148,9 @@
           <!-- Inicio Artico texto ------------------------------------------------------------------------->
 
           <article class="Segundo_Artico_Compras">
-            <div class="Text"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio ratione, deleniti 
-              quisquam numquam ipsam alias nobis enim a ipsum aliquid laboriosam, quae iure esse, possimus nulla beatae sint 
-              natus asperiores.</p>
-
+            <div class="Text">
+              <h3>Descrição do produto :</h3>
+              <p><%= produtoDetalhe2.texto %></p>
             </div>
 
           </article>
@@ -162,6 +161,7 @@
 
           <article class="Terceiro_Artico_Compras">
             <div>
+              <i class="fa-solid fa-basket-shopping"></i>
               <h3><%= produtoDetalhe2.description %></h3>
               <p>R$ <%= produtoDetalhe2.price %></p>
               <button type="submit">Comprar</button>
@@ -181,14 +181,6 @@
 
 </section>
 
-
-
-   
-
- 
-
-
-  
 
 
 </body>
