--- a/public/css/formulario.css
+++ b/public/css/formulario.css
@@ -93,6 +93,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 20px;
 }
 
 .container {
@@ -146,6 +147,12 @@ main {
   bottom: 0;
   left: 0;
   visibility: hidden;
+}
+
+.form-control p {
+  color: #db1701;
+  font-weight: 600;
+  padding-top: 3%;
 }
 
 .form button {
