alterando a rota das páginas tirando o /home

--- a/src/views/body/farmacia.ejs
+++ b/src/views/body/farmacia.ejs
@@ -21,7 +21,7 @@
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
-        <a href="/home">
+        <a href="./">
               <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
           </a>
       </article>
@@ -40,7 +40,7 @@
        
           <form class="form_primeiro_cabecalho2" action="#" method="post">
             
-            <a class="botao2"  href="/home/formulario">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+            <a class="botao2"  href="/formulario">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
     
           </form>
@@ -70,11 +70,11 @@
 
        <article class="abas">
 
-        <a class="tagA_segundo_cabecalho"  href="/home/variedades">
+        <a class="tagA_segundo_cabecalho"  href="/variedades">
              <p class="mercado"><strong>Variedades</strong>  </p> 
         </a>
 
-        <a class="tagA_segundo_cabecalho"  href="/home/pet">
+        <a class="tagA_segundo_cabecalho"  href="/pet">
              <p class="pet"><strong>Espaço pet</strong> </p>
         </a>
 
@@ -191,7 +191,7 @@
               <img class = "img_elementoUm_article_div" src="/img/<%= element1.image %>" alt="">
               <p><%= element1.description %> </p>
               <P> R$ <%= toThousand(element1.price) %> </P>
-              <a target="_blank" href="/area_compras_farmacia/<%= element1.item %> ">
+              <a target="_blank" href="/produtos/area_compras_farmacia/<%= element1.item %> ">
                 <button id="button_comprar" type="submit">Comprar</button></a>
               <button type="submit">Carrinho</button>
           </div>
@@ -213,7 +213,7 @@
             <img class = "img_elementoDois_article_div" src="/img/<%= element2.image %>" alt="">
             <p><%= element2.description %></p>
             <P>R$ <%= toThousand(element2.price) %></P>
-            <a  target="_blank" href="/area_compras_farmacia/<%= element2.item %>">
+            <a  target="_blank" href="/produtos/area_compras_farmacia/<%= element2.item %>">
               <button id="button_comprar" type="submit">Comprar</button></a>
             <button type="submit">Carrinho</button>
         </div>
