--- a/src/views/body/formulario.ejs
+++ b/src/views/body/formulario.ejs
@@ -25,7 +25,7 @@
     <section class="primeiro_cabecalho">
 
       <div class="imagem_logo4">
-          <a href="/home">
+          <a href="./">
               <img class="imagem_logo_img4" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
           </a>
       </div>
@@ -60,15 +60,15 @@
          <article class="abas">
 
           
-            <a class="tagA_segundo_cabecalho"  href="/home/variedades">
+            <a class="tagA_segundo_cabecalho"  href="/variedades">
                    <p class="mercado"><strong>Variedades</strong>  </p> 
             </a>
 
-            <a class="tagA_segundo_cabecalho"  href="/home/pet">
+            <a class="tagA_segundo_cabecalho"  href="/pet">
                     <p class="pet"><strong>Espaço pet</strong> </p>
             </a>
 
-            <a class="tagA_segundo_cabecalho"  href="/home/farmacia">
+            <a class="tagA_segundo_cabecalho"  href="/farmacia">
               <p class="farmacia"><strong>Farmácia </strong> </p>
             </a>
 
@@ -91,14 +91,14 @@
       </div>
 
 
-    <form action="/home/formulario" method="post" id ="form" class="form">
+    <form action="/formulario" method="post" id ="form" class="form">
 
  
       
           <div class="form-control">
 
             <label for="username">Nome de usuário</label>
-            <input type="text" name="username" id="username" placeholder="Digite seu nome de usuário..."/>
+            <input type="text" name="username" id="username" placeholder="Digite seu nome de usuário..." />
             <i class="fas fa-exclamation-circle"></i>
             <i class="fas fa-check-circle"></i>
             <% if (typeof errors !=="undefined") {%> 
