--- a/src/views/body/pet.ejs
+++ b/src/views/body/pet.ejs
@@ -22,7 +22,7 @@
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
-          <a href="/home">
+          <a href="./">
               <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
           </a>
       </article>
@@ -41,7 +41,7 @@
        
           <form class="form_primeiro_cabecalho2" action="#" method="post">
             
-            <a class="botao2"  href="/home/formulario">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+            <a class="botao2"  href="/formulario">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
     
           </form>
@@ -71,13 +71,13 @@
 
        <article class="abas">
 
-        <a class="tagA_segundo_cabecalho"  href="/home/variedades">
+        <a class="tagA_segundo_cabecalho"  href="/variedades">
              <p class="mercado"><strong> Variedades</strong>  </p> 
         </a>
 
             <p class="pet" id ="pag_pet"><strong>Espaço pet </strong> </p>
 
-        <a class="tagA_segundo_cabecalho"  href="/home/farmacia">
+        <a class="tagA_segundo_cabecalho"  href="/farmacia">
             <p class="farmacia"><strong>Farmácia </strong> </p>
         </a>
 
@@ -188,7 +188,7 @@
                 <img class = "img_elementoUm_article_div" src="/img/<%= element1.image %>" alt="">
                 <p><%= element1.description %></p>
                 <P> R$ <%= toThousand(element1.price) %> </P>
-                <a target="_blank" href="/area_compras3/<%= element1.item %> "> 
+                <a target="_blank" href="/produtos/area_compras3/<%= element1.item %> "> 
                   <button type="submit">Comprar</button></a>
                 <button type="submit">Carrinho</button>
             </div>
@@ -211,7 +211,7 @@
               <img class = "img_elementoDois_article_div" src="/img/<%= element2.image %>" alt="">
               <p><%= element2.description %></p>
               <P>R$ <%= toThousand(element2.price) %> </P>
-              <a target="_blank" href="/area_compras3/<%= element2.item %> ">
+              <a target="_blank" href="/produtos/area_compras3/<%= element2.item %> ">
                 <button type="submit">Comprar</button></a>
               <button type="submit">Carrinho</button>
           </div>
