adicionado página de login e atualizando json usuarios

--- a/src/views/body/area_compras_variedades.ejs
+++ b/src/views/body/area_compras_variedades.ejs
@@ -19,7 +19,7 @@
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
-          <a href="/home">
+          <a href="./">
               <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
           </a>
       </article>
@@ -38,7 +38,7 @@
        
           <form class="form_primeiro_cabecalho2" action="#" method="post">
             
-            <a class="botao2"  href="/home/formulario">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+            <a class="botao2"  href="/login">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
     
           </form>
@@ -72,15 +72,15 @@
          <article class="abas">
 
           
-            <a class="tagA_segundo_cabecalho"  href="/home/variedades">
+            <a class="tagA_segundo_cabecalho"  href="/variedades">
                    <p class="mercado"><strong>Variedades</strong>  </p> 
             </a>
 
-            <a class="tagA_segundo_cabecalho"  href="/home/pet">
+            <a class="tagA_segundo_cabecalho"  href="/pet">
                     <p class="pet"><strong>Espaço pet</strong> </p>
             </a>
 
-            <a class="tagA_segundo_cabecalho"  href="/home/farmacia">
+            <a class="tagA_segundo_cabecalho"  href="/farmacia">
               <p class="farmacia"><strong>Farmácia </strong> </p>
             </a>
 
@@ -177,12 +177,8 @@
   
  </section> 
 
- <section class="rodapé_compras">
 
-</section>
-
-
-
+<%- include("../partials/footer") %> 
    
 
  
