--- a/src/views/body/formulario.ejs
+++ b/src/views/body/formulario.ejs
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="/css/formulario_header.css">
     <link rel="stylesheet" href="/css/formulario.css">
+    <link rel="stylesheet" href="/css/footer.css">
     
   
    
@@ -180,13 +181,7 @@
 
 
 
-
- <footer>
-
-
-
-
- </footer>
+  <%- include("../partials/footer") %> 
 
 
 </body>
