--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -2,7 +2,7 @@
   <section class="footer_all">
   
     <article class="imagem_logo2">
-        <a href="/home">
+        <a href="./">
             <img class="imagem2" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
         </a>
     </article>
