adicionado página de login e atualizando json usuarios

--- a/src/views/body/home.ejs
+++ b/src/views/body/home.ejs
@@ -43,7 +43,7 @@
        
           <form class="form_primeiro_cabecalho2" action="#" method="post">
             
-            <a class="botao2"  href="/formulario">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+            <a class="botao2"  href="/login">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
     
           </form>
