--- a/public/css/area_compras.css
+++ b/public/css/area_compras.css
@@ -134,3 +134,61 @@ border-bottom-left-radius: 5px;
   background-color: rgb(250, 248, 251);
   height: 7vh;
 }
+
+@media (max-width:767px) and (min-width:195px) {
+
+  .Articos_Compras{
+    flex-direction: column;
+    align-items: center;
+
+  }
+
+  .Primeiro_Artico_Compras{
+    width: 100%;
+    padding-top: 4%;
+    padding-left: 0%;
+    padding-right: 7%;
+    margin-left: 0%;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    
+  }
+
+  .Segundo_Artico_Compras{
+    width: 100%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 3%;
+    margin-left: 0%;
+    text-align: center;
+    
+  }
+
+  .Segundo_Artico_Compras p{
+    padding-right: 0%;
+    
+  }
+  
+  .Segundo_Artico_Compras h3{
+    padding-right: 0%;
+    padding-bottom: 2%;
+    
+  }
+
+  .Terceiro_Artico_Compras{
+    width: 100%;
+    padding-left: 0%;
+    padding-right: 0%;
+    margin-left: 0%;
+    margin-right: 0%;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px; 
+    
+  }
+
+  .Terceiro_Artico_Compras button {
+    margin-bottom: 20%;
+    font-size: 150%;
+  }
+
+}
