--- a/src/views/body/landingPageLogin.ejs
+++ b/src/views/body/landingPageLogin.ejs
@@ -157,7 +157,7 @@
 
                       <button type="submit"> <strong> Entrar </strong></button>
 
-                      <p> Ainda não tem Cadastro ? </p><a href="">Clique aqui</a>
+                      <p> Ainda não tem Cadastro ? </p><a href="/formularioEmpresas">Clique aqui</a>
 
                   </form>
 
