--- a/public/css/formulario.css
+++ b/public/css/formulario.css
@@ -63,6 +63,24 @@
   color: rgb(222, 20, 20);
 }
 
+.action-button{
+  text-align: center;
+  background-color: rgb(239, 98, 98);
+  color: rgb(222, 20, 20);
+  cursor: pointer;
+  width: 100%;
+  padding: 2%;
+  border: none;
+  font-weight: 700;
+
+}
+
+
+.action-button:hover{
+  background-color: #d3e40d;
+  color: rgb(222, 20, 20);
+}
+
 #email_login {
   position: absolute;
   padding-top: 2%;
@@ -106,7 +124,6 @@ main {
   width: 400px;
   max-width: 100%;
   overflow: hidden;
-  
 }
 
 .header {
@@ -152,7 +169,6 @@ main {
   left: 0;
   visibility: hidden;
 }
-
 
 .form-control p {
   color: #db1701;
