--- a/public/css/formulario.css
+++ b/public/css/formulario.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
 * {
   box-sizing: border-box;
@@ -8,6 +9,8 @@
 /* inicio Block Login----------------------------------------------------------------------------------------------------- */
 .header{
   position: relative;
+  font-family: 'arial', sans-serif;
+  color: rgb(222, 20, 20);
 }
 
 .body_login{
@@ -57,6 +60,24 @@
 .botao_login:hover{
   background-color: #d3e40d;
   border: 2px solid #ff0000;
+  color: rgb(222, 20, 20);
+}
+
+.action-button{
+  text-align: center;
+  background-color: rgb(239, 98, 98);
+  color: rgb(222, 20, 20);
+  cursor: pointer;
+  width: 100%;
+  padding: 2%;
+  border: none;
+  font-weight: 700;
+
+}
+
+
+.action-button:hover{
+  background-color: #d3e40d;
   color: rgb(222, 20, 20);
 }
 
