--- a/public/css/pageLogin.css
+++ b/public/css/pageLogin.css
@@ -10,7 +10,7 @@
   width: 100%;
   height: 600px;
   background: linear-gradient(rgba(159, 158, 158, 0.2), rgba(144, 143, 143, 0.2)),url("/img/supermercado.gif")no-repeat;
-  background-size: 1070px;
+  background-size: cover;
 }
 
 .block_form1 ,
@@ -91,7 +91,6 @@
     flex-direction: column;
     align-items: center;
     height: 700px;
-    background-size: 1370px;
     margin-bottom: 2%;
 
   }
