--- a/src/views/body/home.ejs
+++ b/src/views/body/home.ejs
@@ -157,7 +157,7 @@
           </div>
 
           <div class="slide">
-            <img src="/img/carrossel_imagem3_farmacia.png" alt="imagem 3">
+            <img src="/img/carrossel_imagem3_farmacia.PNG" alt="imagem 3">
           </div>
 
           <div class="slide">
