--- a/public/css/pageLogin.css
+++ b/public/css/pageLogin.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
 .main_login{
-  margin-top: 10px;
+  margin-top: 1%;
   margin-bottom: -15px;
   display: flex;
   justify-content: space-around;
@@ -10,7 +10,7 @@
   width: 100%;
   height: 600px;
   background: linear-gradient(rgba(159, 158, 158, 0.2), rgba(144, 143, 143, 0.2)),url("/img/supermercado.gif")no-repeat;
-  background-size: 1070px;
+  background-size: cover;
 }
 
 .block_form1 ,
@@ -104,9 +104,51 @@
 
 }
 
+ 
+}
 
 
+@media (max-width:3000px) and (min-width:1407px){
   
+  .main_login{
+    height: 800px;
+  }
+
+  .block_form1 ,
+.block_form2 {
+  height: 470px;
+}
+
+.block_form1 h3,
+.block_form2 h3 {
+  font-size: 150%;
+}
+
+.block_form1 div label,
+.block_form2 div label {
+ margin-left: -72%;
+ font-size: 120%;
+
+}
+
+.block_form1 div input,
+.block_form2 div input {
+  height: 40px;
+}
+
+.block_form1  button,
+.block_form2  button{
+  height: 40px;
+  font-size: 120%;
+  
+}
+
+.block_form1 p,
+.block_form2 p{
+  font-size: 120%;
+}
+
+
 }
 
 
