--- a/src/views/body/landingPageLogin.ejs
+++ b/src/views/body/landingPageLogin.ejs
@@ -171,12 +171,12 @@
                       <h3>Clientes</h3>
                           <div class="form-control">
                             <label class="label_form" for="email">Email</label><br>
-                            <input type="text" name="email" id="email" placeholder="Digite seu email.." />
+                            <input type="text" name="email2" id="email2" placeholder="Digite seu email.." />
                           </div>
 
                           <div class="form-control"><br>
                             <label for="password">Senha</label> <br>
-                            <input type="password" name="password" id="password" placeholder="Digite sua senha..."/>
+                            <input type="password" name="password2" id="password2" placeholder="Digite sua senha..."/>
                           </div>
 
                            <a href=""><p class="p_senha">Esqueceu sua senha? </p></a>
