formulario de criação de produtos

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -38,7 +38,7 @@
     <label class="label_footer" for="">Central de Atendimento </label>
     <ul>
         <li type = "none">
-          <a class="lista"href="">Anucie Seu Produto Aqui </a>
+          <a class="lista"href="../criarProduto/">Anucie Seu Produto Aqui </a>
         </li>
 
         <li type = "none">
