--- a/src/views/body/formularioEdit.ejs
+++ b/src/views/body/formularioEdit.ejs
@@ -91,13 +91,13 @@
       </div>
 
 
-    <form action="/formularioEdit/<%= cpfEdit.cpf %>?_method=PUT " method="POST" id ="form" class="form">
+    <form action="/formularioEdit/<%= cpfEdit.cpf2 %>?_method=PUT " method="POST" id ="form" class="form">
 
 
           <div class="form-control">
 
             <label for="username">Nome de usuário</label>
-            <input type="text" name="username" id="username" placeholder="Digite seu nome de usuário..." value="<%= cpfEdit.username %>"/>
+            <input type="text" name="username2" id="username2" placeholder="Digite seu nome de usuário..." value="<%= cpfEdit.username2 %>"/>
             <i class="fas fa-exclamation-circle"></i>
             <i class="fas fa-check-circle"></i>
           </div>
@@ -106,7 +106,7 @@
           <div class="form-control">
 
             <label for="email">Email</label>
-            <input type="text" name="email" id="email" placeholder="Digite seu email.." value="<%= cpfEdit.email %>"/>
+            <input type="text" name="email2" id="email2" placeholder="Digite seu email.." value="<%= cpfEdit.email2 %>"/>
             <i class="fas fa-exclamation-circle"></i>
             <i class="fas fa-check-circle"></i>
     
@@ -116,7 +116,7 @@
           <div class="form-control">
 
             <label for="cpf">CPF</label>
-            <input type="text" name="cpf" id="cpf" placeholder="Digite seu CPF.." value="<%= cpfEdit.cpf %>"/>
+            <input type="text" name="cpf2" id="cpf2" placeholder="Digite seu CPF.." value="<%= cpfEdit.cpf2 %>"/>
             <i class="fas fa-exclamation-circle"></i>
             <i class="fas fa-check-circle"></i>
            <!-- <small>Mensagem de erro</small>-->
@@ -126,7 +126,7 @@
           <div class="form-control">
 
             <label for="telefone">Telefone</label>
-            <input type="text" name="telefone" id="telefone" placeholder="Digite seu número.." value="<%= cpfEdit.telefone %>"/>
+            <input type="text" name="telefone2" id="telefone2" placeholder="Digite seu número.." value="<%= cpfEdit.telefone2 %>"/>
             <i class="fas fa-exclamation-circle"></i>
             <i class="fas fa-check-circle"></i>
          
@@ -136,7 +136,7 @@
           <!-- campo da senha e confirmação inicio------------------------------------------------------------------------------>
           <div class="form-control">
             <label for="password">Senha</label>
-            <input type="password" name="password" id="password" placeholder="Digite sua senha..." value="<%= cpfEdit.password %>"/>
+            <input type="password" name="password2" id="password2" placeholder="Digite sua senha..." value="<%= cpfEdit.password2 %>"/>
             <i class="fas fa-exclamation-circle"></i>
             <i class="fas fa-check-circle"></i>
             
@@ -145,7 +145,7 @@
 
           <div class="form-control">
             <label for="password-confirmation">Confirmação de senha</label>
-            <input type="password"  name="passwordConfirmation"id="password-confirmation" placeholder="Digite sua senha novamente..." value="<%= cpfEdit.passwordConfirmation %>"/>
+            <input type="password"  name="passwordConfirmation2"id="password-confirmation2" placeholder="Digite sua senha novamente..." value="<%= cpfEdit.passwordConfirmation2 %>"/>
             <i class="fas fa-exclamation-circle"></i>
             <i class="fas fa-check-circle"></i>
             
@@ -158,7 +158,7 @@
 						
     </form>
          
-    <form action="/formularioEdit/<%= cpfEdit.cpf %>?_method=DELETE" method="POST" >
+    <form action="/formularioEdit/<%= cpfEdit.cpf2 %>?_method=DELETE" method="POST" >
       <button type="submit" class="action-button delete">Apagar dados</button>
     </form>
 
